Fix drag handler overflow issue

--- a/src/App/styles.css
+++ b/src/App/styles.css
@@ -1,6 +1,7 @@
 .App {
   background-color: #7D8997;
   height: 100vh;
+  overflow: hidden;
 }
 
 .drag-handler {
